--- a/workspaces/ctf-eth/package.json
+++ b/workspaces/ctf-eth/package.json
@@ -4,8 +4,9 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "compile": "buidler compile",
-    "deploy": "buidler --network localhost deploy",
+    "compile": "buidler compile && buidler export-addresses",
+    "deploy": "buidler --network localhost deploy && buidler export-addresses --network localhost",
+    "clean": "rm -rf deployments/localhost build artifacts cache",
     "evm": "buidler node --no-deploy",
     "evm-with-gsn": "run-with-testrpc --networkId 1337 --chainId 1337 'gsn start' "
   },
